# godfrey-pipe

./: .env  .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml  requirements.txt
models/: godfrey_my_lord.onnx
scripts/: turn_lights_off  turn_lights_on
src/godfrey_server/: __init__.py  data.py  main.py  models.py  server.py
